# dask-xgboost-nyctaxi

./: .gitignore  2.  Feature Engineering.ipynb  3a.  Model Training.ipynb  3b.  Model Training - many threads.ipynb  4.  HPO Output.ipynb  Exploratory Analysis.ipynb  Feature Engineering.ipynb  Modeling - Parallel HPO of XGBoost with Optuna and Dask.ipynb  Modeling 1 - Train an XGBoost Model with Dask.ipynb  Modeling 2 - HPO with Optuna & XGBoost.ipynb  Modeling 3 - Parallel HPO of XGBoost with Optuna and Dask (multi cluster).ipynb  Modeling 3 - Parallel HPO of XGBoost with Optuna and Dask.ipynb  Modeling 4 - Parallel HPO of XGBoost with Optuna and Dask (single cluster).ipynb  README.md  environment.yml  pyproject.toml  trained-model-exploration.ipynb  xgboost-optuna-dask-consolidated-function.ipynb  xgboost-optuna-feature-engineering-fixed-upper-bound.ipynb  xgboost-optuna-feature-engineering.ipynb  xgboost-optuna-model-training-different-instance-types.ipynb  xgboost-optuna-model-training-fixed-upper-bound.ipynb  xgboost-optuna-model-training.ipynb
nyc-taxi/: 1-clean-up-taxi.ipynb  2-basic-model.ipynb  3-xgboost.dask.optuna-threads.ipynb  reproducer_xgboost-nullable-ints.ipynb  reproducer_xgboost.ipynb  xgboost-mapping.ipynb  xgboost-optuna-dask.ipynb
