[tool.poetry]
name = "dask-xgboost-nyctaxi"
version = "0.1.0"
description = ""
authors = ["Greg Hayes <hayesgb@gmail.com>"]
readme = "README.md"
packages = [{include = "dask_xgboost_nyctaxi"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
dask = "^2022.12.1"
distributed = "^2022.12.1"
xgboost = "^1.7.2"
coiled = "^0.2.58"
optuna = {git = "https://github.com/optuna/optuna.git"}
dask-labextension = "^6.0.0"
nodejs = "^0.1.1"
llvmlite = "^0.39.1"
dask-ml = "^2022.5.27"
pyarrow = "^10.0.1"
s3fs = "^2022.11.0"
bokeh = "<3"
matplotlib = "^3.6.2"
optuna-dashboard = "^0.8.1"
optuna-fast-fanova = "^0.0.3"
gunicorn = "^20.1.0"
seaborn = "^0.12.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
